# cmake-with-rust

./: CMakeLists.txt  README.md  User.h  main.cpp
pythagorean/: .gitignore  Cargo.toml  build.rs  pythagorean.h
pythagorean/src/: lib.rs
users/: CMakeLists.txt  User.cpp  User.h
users/userage/: .gitignore  Cargo.toml  build.rs  userage.h
users/userage/src/: lib.rs
